로그인. 게시판 수정 조회, 예외

--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -20,7 +20,7 @@
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg" type="button"
                     th:onclick="|location.href='@{/postList}'|">
-                상품 관리
+                게시판
             </button>
         </div>
         <div class="col">
