--- a/src/main/resources/templates/post/post.html
+++ b/src/main/resources/templates/post/post.html
@@ -47,7 +47,7 @@
     </div>
     <div>
         <label for="6">작성자</label>
-        <input type="text" id="6"  class="form-control"  th:value="${post.getId()}" readonly>
+        <input type="text" id="6"  class="form-control"  th:value="${post.getUserID()}" readonly>
     </div>
 
     <hr class="my-4">
