--- a/src/main/resources/templates/post/addForm.html
+++ b/src/main/resources/templates/post/addForm.html
@@ -12,6 +12,9 @@
             border-color: #dc3545;
             color: #dc3545;
         }
+        .my-textarea {
+            height: 400px;
+        }
     </style>
 </head>
 <body>
@@ -19,51 +22,38 @@
 <div class="container">
 
     <div class="py-5 text-center">
-        <h2 th:text="#{page.addItem}">상품 등록</h2>
+        <h2>게시글 등록</h2>
     </div>
 
-    <form action="post.html" th:action th:object="${item}" method="post">
+    <form action="post.html" th:action th:object="${post}" method="post">
 
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">글로벌 오류 메시지</p>
         </div>
 
         <div>
-            <label for="itemName" th:text="#{label.item.itemName}">상품명</label>
-            <input type="text" id="itemName" th:field="*{itemName}"
-                   th:errorclass="field-error" class="form-control" placeholder="이름을 입력하세요">
-            <div class="field-error" th:errors="*{itemName}">
-                상품명 오류
-            </div>
+            <label for="1">제목</label>
+            <input type="text" id="1" th:field="*{title}"
+                   th:errorclass="field-error" class="form-control" placeholder="제목을 입력하세요">
+            <div class="field-error my-textarea" th:errors="*{title}">제목 오류</div>
         </div>
         <div>
-            <label for="price" th:text="#{label.item.price}">가격</label>
-            <input type="text" id="price" th:field="*{price}"
-                   th:errorclass="field-error" class="form-control" placeholder="가격을 입력하세요">
-            <div class="field-error" th:errors="*{price}">
-                가격 오류
-            </div>
-        </div>
-        <div>
-            <label for="quantity" th:text="#{label.item.quantity}">수량</label>
-            <input type="text" id="quantity" th:field="*{quantity}"
-                   th:errorclass="field-error" class="form-control" placeholder="수량을 입력하세요">
-            <div class="field-error" th:errors="*{quantity}">
-                수량 오류
-            </div>
+            <label for="2">내용</label>
+            <textarea id="2" th:field="*{content}"
+                   th:errorclass="field-error" class="form-control" placeholder="내용을 입력하세요"></textarea>
+            <div class="field-error" th:errors="*{content}">내용 오류</div>
         </div>
 
         <hr class="my-4">
 
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit" th:text="#{button.save}">저장</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">저장</button>
             </div>
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/items}'|"
-                        type="button" th:text="#{button.cancel}">취소</button>
+                        th:onclick="|location.href='@{/postList}'|"
+                        type="button">취소</button>
             </div>
         </div>
 
