--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -48,6 +48,14 @@
             </tr>
             </tbody>
         </table>
+        <div class="row">
+            <div class="col">
+                <button class="btn btn-primary float-end"
+                        onclick="location.href='addForm.html'"
+                        th:onclick="|location.href='@{/loginHome}'|"
+                        type="button" >홈으로 이동</button>
+            </div>
+        </div>
     </div>
 
 </div> <!-- /container -->
