--- a/src/main/resources/templates/post/addForm.html
+++ b/src/main/resources/templates/post/addForm.html
@@ -40,7 +40,7 @@
         <div>
             <label for="2">내용</label>
             <textarea id="2" th:field="*{content}"
-                   th:errorclass="field-error" class="form-control" placeholder="내용을 입력하세요"></textarea>
+                   th:errorclass="field-error" class="form-control my-textarea" placeholder="내용을 입력하세요"></textarea>
             <div class="field-error" th:errors="*{content}">내용 오류</div>
         </div>
 
