--- a/src/main/resources/templates/loginHome.html
+++ b/src/main/resources/templates/loginHome.html
@@ -12,7 +12,7 @@
         <h2>홈 화면</h2>
     </div>
 
-    <h4 class="mb-3" th:text="|로그인: *{user.id}|">로그인 사용자 이름</h4>
+    <h4 class="mb-3" th:text="|환영합니다 *{user.id} 님!|">로그인 사용자 이름</h4>
     <hr class="my-4">
 
     <div class="row">
