--- a/src/main/resources/templates/post/editForm.html
+++ b/src/main/resources/templates/post/editForm.html
@@ -44,7 +44,7 @@
         <div>
             <label>내용</label>
             <textarea th:field="*{content}"
-                      th:errorclass="field-error" class="form-control" placeholder="내용을 입력하세요"></textarea>
+                      th:errorclass="field-error" class="form-control my-textarea" placeholder="내용을 입력하세요"></textarea>
             <div class="field-error" th:errors="*{content}">내용 오류</div>
         </div>
         <div>
