--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -22,15 +22,15 @@
         <h2>로그인</h2>
     </div>
 
-    <form action="/login" th:action th:object="${user}" method="post">
+    <form th:action="@{/login}" th:object="${user}" method="post">
 
         <div th:if="${#fields.hasGlobalErrors()}">
             <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
         </div>
 
         <div>
-            <label for="id">로그인 ID</label>
-            <input type="text" id="id" th:field="*{id}" class="form-control"
+            <label for="username">로그인 ID</label>
+            <input type="text" id="username" th:field="*{username}" class="form-control"
                    th:errorclass="field-error">
             <div class="field-error" th:errors="*{id}" />
         </div>
