--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -33,21 +33,20 @@
                             </svg> <span class="small">(0)</span></a> 
                     </li>
 
-                    <li th:if="${user?.id == null}" class="nav-item"> <a th:href="@{/login}" class="nav-link pb-3 ps-2 pe-2 pt-3" href="#" title="Account" id="login_button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
+
+                    <li th:if="${#session.getAttribute('user')}" class="nav-item">
+                        <p class="nav-link p-2 pb-3 ps-2 pe-2 pt-3" th:text="|환영합니다 *{user.username} 님!|"></p>
+                    </li>
+                    <li th:if="${#session.getAttribute('user')}" class="nav-item">
+                        <a th:href="@{/logout}" class="nav-link p-2 pb-3 ps-2 pe-2 pt-3"> 로그아웃</a>
+                    </li>
+                    <li th:unless="${#session.getAttribute('user')}" class="nav-item"> <a th:href="@{/login}" class="nav-link pb-3 ps-2 pe-2 pt-3" href="#" title="Account" id="login_button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
                         <g>
                             <path fill="none" d="M0 0h24v24H0z"></path>
                             <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-4.987-3.744A7.966 7.966 0 0 0 12 20c1.97 0 3.773-.712 5.167-1.892A6.979 6.979 0 0 0 12.16 16a6.981 6.981 0 0 0-5.147 2.256zM5.616 16.82A8.975 8.975 0 0 1 12.16 14a8.972 8.972 0 0 1 6.362 2.634 8 8 0 1 0-12.906.187zM12 13a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
                         </g>
                     </svg></a>
                     </li>
-                    <li th:if="${user?.id != null}" class="nav-item">
-                        <p class="nav-link p-2 pb-3 ps-2 pe-2 pt-3" th:text="|환영합니다 *{user.id} 님!|"></p>
-                    </li>
-                    <li th:if="${user?.id != null}" class="nav-item">
-                        <a th:href="@{/logout}" class="nav-link p-2 pb-3 ps-2 pe-2 pt-3"> 로그아웃</a>
-                    </li>
-
-
                 </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown-3" aria-controls="navbarNavDropdown-3" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> 
                 </button>
