--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col">
                 <button class="btn btn-primary float-end"
-                        onclick="location.href='addForm.html'"
+                        onclick="location.href='loginHome.html'"
                         th:onclick="|location.href='@{/loginHome}'|"
                         type="button" >홈으로 이동</button>
             </div>
