--- a/src/main/resources/templates/security/500Denied.html
+++ b/src/main/resources/templates/security/500Denied.html
@@ -28,7 +28,7 @@
   <div class="error-message">
     <h1>Access Denied</h1>
     <p>Page is not accessible. 500 Error </p>
-    <a href="/main_menu">Return to Main</a>
+    <a href="/">Return to Main</a>
   </div>
 </div>
 </body>
