--- a/src/main/resources/templates/item/item.html
+++ b/src/main/resources/templates/item/item.html
@@ -32,6 +32,18 @@
         <label for="2">내용</label>
         <input type="text" id="2" class="form-control" th:value="${item.getContent()}" readonly>
     </div>
+    <div>
+        <label for="3">가격</label>
+        <input type="text" id="3" class="form-control" th:value="${item.getPrice()}" readonly>
+    </div>
+    <div>
+        <label for="4">좋아요</label>
+        <input type="text" id="4" class="form-control" th:value="${item.getLikes()}" readonly>
+    </div>
+    <div>
+        <label for="5">조회수</label>
+        <input type="text" id="5" class="form-control" th:value="${item.getViews()}" readonly>
+    </div>
 
     <hr class="my-4">
 
