--- a/src/main/resources/templates/item/itemList.html
+++ b/src/main/resources/templates/item/itemList.html
@@ -28,6 +28,9 @@
                 <th>NO.</th>
                 <th>제목</th>
                 <th>컨텐츠</th>
+                <th>가격</th>
+                <th>좋아요</th>
+                <th>조회수</th>
             </tr>
             </thead>
             <tbody>
@@ -35,6 +38,9 @@
                 <td th:text="${item.id}"></td>
                 <td><a th:href="@{|/item/${item.getId()}|}" th:text="${item.getTitle()}"></a></td>
                 <td th:text="${item.content}"></td>
+                <td th:text="${item.price}"></td>
+                <td th:text="${item.likes}"></td>
+                <td th:text="${item.views}"></td>
             </tr>
             </tbody>
         </table>
