--- a/src/main/resources/templates/main/america.html
+++ b/src/main/resources/templates/main/america.html
@@ -1,21 +1,20 @@
 <!DOCTYPE HTML>
-<!--
-	Ethereal by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>일본 여행</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css//self.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="/css/main.css"/>
+		<link rel="stylesheet" href="/css/self.css" />
+		<noscript><link rel="stylesheet" href="/css/noscript.css"/></noscript>
 	</head>
 	<div class="fixed-element">
 		<a style="text-align: center" href="#last" class="button primary color1 square icon solid">구매하기</a>
 	</div>
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/browser.min.js"></script>
+	<script src="/js/breakpoints.min.js"></script>
+	<script src="/js/main.js"></script>
 	<body class="is-preload">
 
 		<!-- Page Wrapper -->
@@ -27,7 +26,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">인기 일본여행 패키지<br />	</h1>
+									<h1 class="major">인기 일본여행 패키지<br/>	</h1>
 									<p>일본 여행을 계획 중이라면 꼭 가보세요!</p>
 									<p>일본은 독특한 문화와 아름다운 자연 경관을 함께 누릴 수 있는 최고의 여행지입니다.</p>
 									<ul class="actions">
@@ -38,8 +37,6 @@
 									<img src="images/pic01.jpg" alt="" />
 								</div>
 							</section>
-
-						<!-- Panel (Spotlight) -->
 							<section class="panel banner right" id="first">
 
 								<div class="content span-15" style="font-weight: bolder">
@@ -414,18 +411,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 							</section>
 
-						<!-- Copyright -->
 							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
 			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
