--- a/src/main/resources/templates/login/addForm.html
+++ b/src/main/resources/templates/login/addForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+          href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
@@ -29,10 +29,10 @@
         </div>
 
         <div>
-            <label for="id">ID</label>
-            <input type="text" id="id" th:field="*{id}" class="form-control"
+            <label for="id">아이디</label>
+            <input type="text" id="id" th:field="*{username}" class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{id}" />
+            <div class="field-error" th:errors="*{username}" />
         </div>
         <div>
             <label for="password">비밀번호</label>
