--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+          href="../../static/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
-            max-width: 560px;
+            padding: 5%;
+            max-width: 700px;
+            border: 1px solid darkgrey;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        .oauth-button-container {
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
         .field-error {
             border-color: #dc3545;
@@ -48,14 +58,21 @@
                 <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
             </div>
             <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/}'|"
-                        type="button">취소</button>
+                <button class="w-100 btn btn-secondary btn-lg"
+                        th:onclick="|location.href='@{/register}'|"
+                        type="button">회원가입</button>
             </div>
         </div>
-
     </form>
-
+    <div class="oauth-button-container">
+        <button class="google-oauth-button" onclick="location.href='/oauth2/authorization/google'">
+            <img src="https://developers.google.com/identity/images/g-logo.png" alt="구글 아이콘">
+            <span>구글로 로그인</span>
+        </button>
+    </div>
 </div> <!-- /container -->
+
+
+
 </body>
 </html>
