--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -11,8 +11,6 @@
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="bootstrap/css/blocks.css" rel="stylesheet">
         <link rel="stylesheet" href="blocks.css">
-        <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
     </head>
     <body class="fw-light text-secondary">
         <nav class="bg-white navbar navbar-expand-lg navbar-light py-lg-1"> 
@@ -34,22 +32,26 @@
                     </li>
 
 
-                    <li th:if="${#session.getAttribute('user')}" class="nav-item">
-                        <p class="nav-link p-2 pb-3 ps-2 pe-2 pt-3" th:text="|환영합니다 *{session.user.username} 님!|"></p>
+                    <li th:if="${user}" class="nav-item">
+                        <p class="nav-link p-2 pb-3 ps-2 pe-2 pt-3" th:text="|환영합니다 ${user.username} 님!|"></p>
                     </li>
-                    <li th:if="${#session.getAttribute('user')}" class="nav-item">
-                        <a th:href="@{/logout}" class="nav-link p-2 pb-3 ps-2 pe-2 pt-3"> 로그아웃</a>
+                    <li th:if="${user}" class="nav-item">
+                        <a th:href="@{/logout}" class="nav-link p-2 pb-3 ps-2 pe-2 pt-3">로그아웃</a>
                     </li>
-                    <li th:unless="${#session.getAttribute('user')}" class="nav-item"> <a th:href="@{/login}" class="nav-link pb-3 ps-2 pe-2 pt-3" href="#" title="Account" id="login_button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
-                        <g>
-                            <path fill="none" d="M0 0h24v24H0z"></path>
-                            <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-4.987-3.744A7.966 7.966 0 0 0 12 20c1.97 0 3.773-.712 5.167-1.892A6.979 6.979 0 0 0 12.16 16a6.981 6.981 0 0 0-5.147 2.256zM5.616 16.82A8.975 8.975 0 0 1 12.16 14a8.972 8.972 0 0 1 6.362 2.634 8 8 0 1 0-12.906.187zM12 13a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
-                        </g>
-                    </svg></a>
+                    <li th:unless="${user}" class="nav-item">
+                        <a th:href="@{/login}" class="nav-link pb-3 ps-2 pe-2 pt-3" href="#" title="Account" id="login_button">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="1.25em" height="1.25em">
+                                <g>
+                                    <path fill="none" d="M0 0h24v24H0z"></path>
+                                    <path d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-4.987-3.744A7.966 7.966 0 0 0 12 20c1.97 0 3.773-.712 5.167-1.892A6.979 6.979 0 0 0 12.16 16a6.981 6.981 0 0 0-5.147 2.256zM5.616 16.82A8.975 8.975 0 0 1 12.16 14a8.972 8.972 0 0 1 6.362 2.634 8 8 0 1 0-12.906.187zM12 13a4 4 0 1 1 0-8 4 4 0 0 1 0 8zm0-2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"></path>
+                                </g>
+                            </svg>
+                        </a>
                     </li>
-                    <li th:if="${user.username == 'admin'}" class="nav-item">
-                        <a th:href="@{/itemList}" class="nav-link p-2 pb-3 ps-2 pe-2 pt-3"> [관리자]</a>
+                    <li th:if="${user.username=='admin'}" class="nav-item">
+                        <a th:href="@{/itemList}" class="nav-link p-2 pb-3 ps-2 pe-2 pt-3">[관리자]</a>
                     </li>
+
                 </ul>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown-3" aria-controls="navbarNavDropdown-3" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> 
                 </button>
@@ -59,13 +61,9 @@
                             <a class="active nav-link px-lg-3 py-lg-4" aria-current="page" href="#" id="home_button">Home</a>
                         </li>                         
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#" id="about_button">About</a> 
-                        </li>                         
-                        <li class="nav-item"> 
-</li>
+                        </li>
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#" id="shop_button">Shop</a> 
-                        </li>                         
-                        <li class="nav-item"> 
-</li>                         
+                        </li>
                     </ul>                     
                 </div>                 
             </div>             
