--- a/src/main/resources/templates/login/addForm.html
+++ b/src/main/resources/templates/login/addForm.html
@@ -1,61 +1,50 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../../static/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .container {
-            max-width: 560px;
-        }
-        .field-error {
-            border-color: #dc3545;
-            color: #dc3545;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Title</title>
+  <link th:href="@{/css/loginForm.css}"
+        href="css/new.scss" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-
 <div class="container">
+  <h1>REGISTER</h1>
 
-    <div class="py-5 text-center">
-        <h2>회원가입</h2>
+  <ul class="links">
+    <li>
+      <a id="login">REGISTER</a>
+    </li>
+  </ul>
+  <form th:action="@{/register}" th:object="${user}" method="post">
+    <div th:if="${#fields.hasGlobalErrors()}">
+      <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
     </div>
 
-    <form action="/user/add" th:action th:object="${user}" method="post">
+    <div class="input__block">
+      <input type="text" placeholder="아이디" id="username" th:field="*{username}" class="form-control"
+             th:errorclass="field-error">
+      <div class="field-error" th:errors="*{username}"/>
+    </div>
+    <div class="input__block">
+      <input type="password" placeholder="비밀번호" class="input" th:field="*{password}" th:errorclass="field-error" />
+      <div class="field-error" th:errors="*{password}"/>
+    </div>
+    <button class="signin__btn">
+      REGISTER
+    </button>
+  </form>
 
-        <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
-        </div>
+  <div class="separator"><p>OR</p></div>
 
-        <div>
-            <label for="id">아이디</label>
-            <input type="text" id="id" th:field="*{username}" class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{username}" />
-        </div>
-        <div>
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{password}" />
-        </div>
-
-        <hr class="my-4">
-
-        <div class="row">
-            <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">회원가입</button>
-            </div>
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
-                        th:onclick="|location.href='@{/}'|"
-                        type="button">취소</button>
-            </div>
-        </div>
-
-    </form>
-
-</div> <!-- /container -->
+  <button class="google__btn" onclick="location.href='/oauth2/authorization/google'">
+    <i class="fa fa-google"></i>
+    Sign in with Google
+  </button>
+  <button class="github__btn" onclick="location.href='/login'">
+    <i class="fa fa-google"></i>
+    BACK TO LOGIN
+  </button>
+</div>
 </body>
 </html>
