--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -1,78 +1,49 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../../static/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .container {
-            padding: 5%;
-            max-width: 700px;
-            border: 1px solid darkgrey;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        .oauth-button-container {
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        .field-error {
-            border-color: #dc3545;
-            color: #dc3545;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link th:href="@{/css/loginForm.css}" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-
 <div class="container">
+  <!-- Heading -->
+  <h1>LOGIN</h1>
 
-    <div class="py-5 text-center">
-        <h2>로그인</h2>
+  <ul class="links">
+    <li>
+      <a id="signin">LOGIN</a>
+    </li>
+  </ul>
+  <form th:action="@{/login}" th:object="${user}" method="post">
+    <div th:if="${#fields.hasGlobalErrors()}">
+      <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
     </div>
 
-    <form th:action="@{/login}" th:object="${user}" method="post">
-
-        <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
-        </div>
-
-        <div>
-            <label for="username">로그인 ID</label>
-            <input type="text" id="username" th:field="*{username}" class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{id}" />
-        </div>
-        <div>
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control"
-                   th:errorclass="field-error">
-            <div class="field-error" th:errors="*{password}" />
-        </div>
-
-        <hr class="my-4">
-
-        <div class="row">
-            <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
-            </div>
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        th:onclick="|location.href='@{/register}'|"
-                        type="button">회원가입</button>
-            </div>
-        </div>
-    </form>
-    <div class="oauth-button-container">
-        <button class="google-oauth-button" onclick="location.href='/oauth2/authorization/google'">
-            <img src="https://developers.google.com/identity/images/g-logo.png" alt="구글 아이콘">
-            <span>구글로 로그인</span>
-        </button>
+    <div class="input__block">
+      <input type="text" placeholder="아이디" id="username" th:field="*{username}" class="form-control"
+             th:errorclass="field-error">
+      <div class="field-error" th:errors="*{username}"/>
     </div>
-</div> <!-- /container -->
+    <div class="input__block">
+      <input type="password" placeholder="비밀번호" class="input" th:field="*{password}" th:errorclass="field-error" />
+      <div class="field-error" th:errors="*{password}"/>
+    </div>
+    <button class="signin__btn">
+      LOGIN
+    </button>
+  </form>
 
-
-
+  <div class="separator"><p>OR</p></div>
+  <button class="google__btn" onclick="location.href='/oauth2/authorization/google'">
+    <i class="fa fa-google"></i>
+    Sign in with Google
+  </button>
+  <button class="github__btn" onclick="location.href='/register'">
+    <i class="fa fa-google"></i>
+    REGISTER
+  </button>
+</div>
 </body>
 </html>
